--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorFFFFFF">#FFFFFF</color>
     <color name="transparent">#00000000</color>
-
+    <color name="white">#ffffffff</color>
 </resources>
