--- a/comp_netstudyt/src/main/res/layout/activity_netstudy.xml
+++ b/comp_netstudyt/src/main/res/layout/activity_netstudy.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:textColor="#000000"
         android:id="@+id/tv_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:textSize="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tool:text="Das" />
+
+    <TextView
+        android:id="@+id/tv_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="发送一个事件用域更新自己"
+        android:textSize="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_data" />
+
+    <Button
+        android:id="@+id/btn_click"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="谈起一个弹窗，更新数据"
+        app:layout_constraintTop_toBottomOf="@+id/tv_test" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
