--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,6 +121,12 @@
                     android:layout_height="wrap_content"
                     android:text="自定义下拉"
                     />
+                <Button
+                    android:id="@+id/btn_soul"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="仿soul"
+                    />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
