--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/beauty_item_seekbar">
-           <!-- android:layoutAnimation="@anim/layoutanimal_me"-->
+            <!-- android:layoutAnimation="@anim/layoutanimal_me"-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -82,8 +82,8 @@
 
                 <com.example.a11699.androidxallstudy.customview.FollowFingerView
                     android:layout_width="match_parent"
-                    android:visibility="gone"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:visibility="gone" />
 
                 <com.example.a11699.androidxallstudy.customview.JellyTextView
                     android:id="@+id/btn_viewdrager"
@@ -91,42 +91,48 @@
 
                     android:layout_height="wrap_content"
                     android:text="神奇的ViewDragHelper" />
+
                 <Button
                     android:id="@+id/btn_myviewmodel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="自定义viewmodel"
-                    />
+                    android:text="自定义viewmodel" />
+
                 <Button
                     android:id="@+id/btn_navigation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="JepPAck_Navigation学习"
-                    />
+                    android:text="JepPAck_Navigation学习" />
+
                 <Button
                     android:id="@+id/btn_network"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="网络请求"
-                    />
+                    android:text="网络请求" />
+
                 <Button
                     android:id="@+id/btn_sendgift"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="送礼联机控件"
-                    />
+                    android:text="送礼联机控件" />
+
                 <Button
                     android:id="@+id/btn_dropdown"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="自定义下拉"
-                    />
+                    android:text="自定义下拉" />
+
                 <Button
                     android:id="@+id/btn_soul"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="仿soul"
-                    />
+                    android:text="仿soul  和  支持多指作画" />
+
+                <Button
+                    android:id="@+id/btn_live"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="直播间" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
