--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,6 +138,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="票屏弹幕" />
+                <Button
+                    android:id="@+id/btn_tab"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="自定义Tab" />
+                <Button
+                    android:id="@+id/btn_wubaloading"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="自定义五八同城加载动画" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
