--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorFFFFFF">#FFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name="white">#ffffffff</color>
+    <color name="color_a0a0a0">#A0A0A0</color>
 </resources>
