--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -34,6 +34,8 @@
         android:id="@+id/customTabLayout"
         android:layout_width="match_parent"
         android:layout_height="55dp"
+        android:background="@color/colorPrimaryDark"
+        app:average="true"
         app:bottomlinecolor="@drawable/bottom_line"
         app:bottomlineheight="4dp"
         app:bottomlinewidth="20dp"
@@ -61,6 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/viewPager" />
 
     <com.example.a11699.androidxallstudy.customtab.custonview.CustomTabLayout
+
         android:id="@+id/customTabLayout2"
         android:layout_width="wrap_content"
         android:layout_height="55dp"
@@ -72,5 +75,14 @@
         app:itemmarginright="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/customTabLayout1" />
+
+
+    <LinearLayout
+        android:id="@+id/dsdsdsdsds"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/customTabLayout2" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
