--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -77,12 +77,18 @@
         app:layout_constraintTop_toBottomOf="@+id/customTabLayout1" />
 
 
-    <LinearLayout
-        android:id="@+id/dsdsdsdsds"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/customTabLayout2" />
-
+    <!--欢迎界面底部导航栏-->
+    <com.example.a11699.androidxallstudy.customtab.custonview.CustomTabLayout
+        android:id="@+id/customTabLayout_splash"
+        android:background="#000000"
+        android:layout_width="wrap_content"
+        android:layout_height="8dp"
+        android:layout_marginBottom="30dp"
+        app:average="false"
+        app:hasBottomLine="false"
+        app:itemmarginright="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
