--- a/comp_im/src/main/res/layout/item_converlist.xml
+++ b/comp_im/src/main/res/layout/item_converlist.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
@@ -48,4 +47,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="12:00" />
+
+    <TextView
+        android:id="@+id/tv_unread_item_num"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/shape_red_circle"
+        android:gravity="center"
+        android:text="1"
+        android:textColor="#ffffffff"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
