--- a/comp_im/src/main/res/layout/item_chat.xml
+++ b/comp_im/src/main/res/layout/item_chat.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginTop="10dp"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <com.example.a11699.comp_base.util.GlideImageView
         android:id="@+id/img_item_head"
         android:layout_width="@dimen/dp_40"
         android:layout_height="@dimen/dp_40"
