--- a/comp_im/src/main/res/layout/chat_input_layout.xml
+++ b/comp_im/src/main/res/layout/chat_input_layout.xml
@@ -2,15 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/navigation_bar_color"
     android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/input_title_line_color" />
-
     <LinearLayout
+        android:background="#000"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="57dp"
@@ -78,10 +73,6 @@
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/more_groups"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
+
 
 </LinearLayout>
