'新增库-lib_custonview,接入丝滑软键盘'

--- a/comp_im/src/main/res/layout/activity_im.xml
+++ b/comp_im/src/main/res/layout/activity_im.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.a11699.comp_im.weight.SoftViewGroup
-    android:id="@+id/soft_viewgroup"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.a11699.lib_customview.softinputLinearlayout.SoftViewGroup xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/soft_viewgroup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -38,4 +37,4 @@
 
         />
 
-</com.example.a11699.comp_im.weight.SoftViewGroup>
+</com.example.a11699.lib_customview.softinputLinearlayout.SoftViewGroup>
