'增加说明文档'

--- a/comp_im/src/main/res/layout/activity_im.xml
+++ b/comp_im/src/main/res/layout/activity_im.xml
@@ -29,12 +29,10 @@
 
     </LinearLayout>
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/more_groups"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-
         />
 
 </com.example.a11699.lib_customview.softinputLinearlayout.SoftViewGroup>
