--- a/comp_im/src/main/res/layout/activity_im.xml
+++ b/comp_im/src/main/res/layout/activity_im.xml
@@ -30,6 +30,7 @@
     </LinearLayout>
 
     <FrameLayout
+        android:background="#ffffff"
         android:id="@+id/more_groups"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
