'学习使用PathMeature这个工具类，并切通过使用里面的两个api实现了不同效果，见代码：LiZiActivity'

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -164,16 +164,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="自定义密码输入框" />
+
                 <Button
                     android:id="@+id/btn_battery"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="电池" />
+
                 <Button
                     android:id="@+id/btn_im"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Im" />
+
+                <Button
+                    android:id="@+id/btn_lizi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="粒子消散动画" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
@@ -181,9 +189,6 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-    
-    
     <LinearLayout
         android:id="@+id/ly"
         android:layout_width="match_parent"
