--- a/app/src/main/res/layout/activity_lizi.xml
+++ b/app/src/main/res/layout/activity_lizi.xml
@@ -3,11 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="#023">
 
     <com.example.a11699.androidxallstudy.lizixiaosan.LiZiDissipateView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.example.a11699.androidxallstudy.lizixiaosan.BaGuaView
         android:layout_width="wrap_content"
@@ -22,8 +24,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.example.a11699.androidxallstudy.lizixiaosan.PathMeasure_GetgetPosTanView
-        android:layout_width="200dp"
         android:id="@+id/path_view_getpos"
+        android:layout_width="200dp"
         android:layout_height="200dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/path_view" />
