--- a/comp_customview/src/main/res/values/attrs.xml
+++ b/comp_customview/src/main/res/values/attrs.xml
@@ -7,4 +7,10 @@
         <attr name="stepTextSize" format="dimension"/>
         <attr name="stepTextColor" format="color"/>
     </declare-styleable>
+
+    <!--折纸-->
+    <declare-styleable name="PaperView">
+        <attr name="paper_duration" format="integer"/>
+        <attr name="paper_bg_color" format="color"/>
+    </declare-styleable>
 </resources>
