--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -202,6 +202,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="动画效果" />
+                <Button
+                    android:id="@+id/btn_future"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="给未来写封信" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
