--- a/app/src/main/res/layout/activity_bottom_tab.xml
+++ b/app/src/main/res/layout/activity_bottom_tab.xml
@@ -4,18 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/ccc"
     tools:context=".botomtab.BottomTabActivity">
+
+    <ImageView
+        android:id="@+id/img1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#005" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dsadasdsadasdsadsadasdas"
+        android:textColor="#ffffff"
+        android:textSize="30dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.example.a11699.androidxallstudy.botomtab.BottomTabLayoutView
         android:id="@+id/bottomTabLayout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/white"
-        app:image_center_height="42dp"
-        app:image_center_width="42dp"
+        app:image_center_height="35dp"
+        app:image_center_width="35dp"
         app:image_height="35dp"
         app:image_width="35dp"
         app:img_item_height="35dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
