--- a/app/src/main/res/layout/activity_breath.xml
+++ b/app/src/main/res/layout/activity_breath.xml
@@ -32,7 +32,20 @@
         app:distance2singleline="30dp"
         app:intext="罐中沉思"
         app:intextSize="25dp"
-        app:shadowcolor="@color/colorAccent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gloriousView" />
+        app:layout_constraintTop_toBottomOf="@+id/gloriousView"
+        app:shadowcolor="@color/colorAccent" />
+
+    <com.example.a11699.androidxallstudy.breath.BgView
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
